<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_gradient"
    android:padding="10dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.vald3nir.core_ui.components.CustomImageView
                android:id="@+id/imv_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:contentDescription="@string/generic_water"
                android:src="@drawable/generic_water" />

            <TextView
                android:id="@+id/txt_change_image"
                style="@style/TittleStyle"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:text="@string/change_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/txt_category_label"
                    style="@style/LabelStyle"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.vald3nir.core_ui.components.CustomSpinner
                    android:id="@+id/sp_product_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_category_label"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_name_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/name"

                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    style="@style/TextInputStyle"

                    tools:text="Santa Rita" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_price_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/price"

                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_price"
                    style="@style/PriceInputStyle"
                    tools:text="R$ 15.98" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.vald3nir.diskwater.presentation.components.BaseButton
        android:id="@+id/btn_save_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>