<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_cell">

        <com.vald3nir.toolkit.core.componets.customviews.CustomImageView
            android:id="@+id/imv_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/background_cell"
            android:contentDescription="@string/generic_water"
            android:src="@drawable/generic_water"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_title"
            style="@style/BigTittleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imv_photo"
            tools:text="titulo" />

        <TextView
            android:id="@+id/txv_price_label"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_title" />

        <TextView
            android:id="@+id/txv_quantity_label"
            style="@style/TittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_price_label" />

        <TextView
            android:id="@+id/txv_price"
            style="@style/TittleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txv_price_label"
            app:layout_constraintTop_toBottomOf="@+id/txv_title"
            tools:text="12,00" />

        <com.vald3nir.toolkit.core.componets.customviews.CustomSpinner
            android:id="@+id/csp_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>